Ad new column to store rest api server (#919)
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>
Co-authored-by: muralibasani <muralidahr.basani@aiven.io>